kubernetes/dex/manifests/shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
  labels:
    app: shell
spec:
  containers:
    - name: shell
      image: alpine:latest
      command: ["/bin/sh"]
      args:
        - "-c"
        - "apk add --update-cache kubectl && /bin/sleep 99999999"
      volumeMounts:
        - name: host-volume
          mountPath: /host
  volumes:
    - name: host-volume
      hostPath:
        path: /
        type: Directory
