kubernetes/dex/manifests/openldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  ports:
    - name: ldap
      port: 389
    - name: ldaps
      port: 636
  selector:
    app: openldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  labels:
    app: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: localhost/openldap:latest
          imagePullPolicy: Never
          ports:
            - name: ldap
              containerPort: 389
            - name: ldaps
              containerPort: 636

          volumeMounts:
            - name: data
              mountPath: /data
            - name: output
              mountPath: /output
            - name: input
              mountPath: /input/templates
            - name: certs
              mountPath: /input/certs

      volumes:
        - name: data
          emptyDir: {}
        - name: output
          emptyDir: {}
        - name: input
          configMap:
            name: openldap-config
        - name: certs
          secret:
            secretName: openldap-cert
