kubernetes/dex/manifests/dex.yaml
# reference: https://github.com/dexidp/dex/blob/master/examples/k8s/dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      containers:
        - image: ghcr.io/dexidp/dex:v2.39.1
          name: dex
          command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]

          ports:
            - name: http
              containerPort: 5555
            - name: https
              containerPort: 5556

          volumeMounts:
            - name: config
              mountPath: /etc/dex/cfg
            - name: data
              mountPath: /data
            - name: dex-cert
              mountPath: /etc/dex/tls
      volumes:
        - name: config
          configMap:
            name: dex
            items:
              - key: config.yaml
                path: config.yaml
        - name: data
          persistentVolumeClaim:
            claimName: dex
        - name: dex-cert
          secret:
            secretName: dex-cert
---
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app: dex
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dex
spec:
  virtualhost:
    fqdn: dex.127.0.0.152.nip.io
    tls:
      secretName: dex-cert
  routes:
    - services:
        - name: dex
          port: 80
