kubernetes/dex/manifests/keycloak.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloak
spec:
  virtualhost:
    fqdn: keycloak.127.0.0.152.nip.io
    tls:
      secretName: keycloak-external
  routes:
    - services:
        - name: keycloak
          port: 8080
      # Allow also HTTP to make REST API use easier for dev use
      permitInsecure: true
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8443
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  replicas: 1
  serviceName: keycloak-headless
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak

          ## Releases
          ## https://www.keycloak.org/downloads-archive.html
          ## https://quay.io/repository/keycloak/keycloak?tab=tags
          image: quay.io/keycloak/keycloak:23.0.3
          #imagePullPolicy: Never
          command:
            - /opt/keycloak/bin/kc.sh
            - start

          ## Options
          ## https://www.keycloak.org/server/configuration
          ## https://www.keycloak.org/server/containers
          ## https://www.keycloak.org/server/all-config
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080


          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
